chenched icon form Delete

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="cards__category"></p>
             <p class="card__name"></p>
             <div class="card__wrapper">
-                <button class="card__btn btn btn-danger" type="button" data-id="id"><i class="fa-solid fa-trash"></i></button>
+                <button class="card__btn btn btn-danger" type="button" data-id="id">Delete</button>
             </div>
         </li>
     </template>
